new make mechanism

--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -1,1 +1,28 @@
-include "../agents/pipe_agent/pipe_pkg.mkl"
+PIPE_ROOT_PATH 		  = ../agents/pipe_agent
+LPIF_ROOT_PATH 		  = ../agents/lpif_agent
+ENV_ROOT_PATH       = ../env
+SEQ_ROOT_PATH       = ../sequences
+TEST_ROOT_PATH      = ../test
+COMMON_ROOT_PATH    = ..
+TOP_ROOT_PATH       = ../top
+
+include ../common.mk
+include ../agents/pipe_agent/pipe_agent.mk
+include ../agents/lpif_agent/lpif_agent.mk
+include ../env/pcie_env.mk
+include ../sequences/pcie_seq.mk
+include ../test/pcie_test.mk
+include ../top/top.mk
+
+TEST								?= pcie_test
+SEQ									?= pcie_vseq
+
+build_pipe: COMMON_BUILD PIPE_BUILD
+build_lpif: COMMON_BUILD LPIF_BUILD
+build_agents: COMMON_BUILD PIPE_BUILD LPIF_BUILD
+
+build: COMMON_BUILD LPIF_BUILD PIPE_BUILD ENV_BUILD SEQ_BUILD TEST_BUILD TOP_BUILD
+	@echo Project is built 
+
+run:
+	@vsim -c -do "run -all" hvl_top hdl_top +UVM_TESTNAME="$(TEST)" +VSEQ=${SEQ} -suppress 8887
