--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -18,11 +18,14 @@ include ../top/top.mk
 TEST								?= pcie_test
 SEQ									?= pcie_vseq
 
-build_pipe: 	COMMON_BUILD PIPE_BUILD_PACKAGE PIPE_BUILD_INTERFACES
-build_lpif: 	COMMON_BUILD LPIF_BUILD_PACKAGE LPIF_BUILD_INTERFACES
-build_agents: 	COMMON_BUILD PIPE_BUILD LPIF_BUILD
+build_pipe: 				COMMON_BUILD PIPE_BUILD_PACKAGE PIPE_BUILD_INTERFACES
+build_lpif: 				COMMON_BUILD LPIF_BUILD_PACKAGE LPIF_BUILD_INTERFACES
+build_agents: 			COMMON_BUILD build_pipe build_lpif
+build_seq:    			build_agents SEQ_BUILD
+build_env:    			build_agents ENV_BUILD
+build_test:    			build_agents build_env build_seq TEST_BUILD
 
-build: COMMON_BUILD LPIF_BUILD PIPE_BUILD ENV_BUILD SEQ_BUILD TEST_BUILD TOP_BUILD
+build: COMMON_BUILD build_agents ENV_BUILD SEQ_BUILD TEST_BUILD TOP_BUILD
 	@echo Project is built 
 
 run:
