UVM_HOME is defined at user defined variables in windows added UVM_NO_RELNOTES flag

--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -5,6 +5,7 @@ SEQ_ROOT_PATH       	= ../sequences
 TEST_ROOT_PATH      	= ../test
 COMMON_ROOT_PATH    	= ..
 TOP_ROOT_PATH       	= ../top
+# UVM_HOME				= C:/questasim64_10.4e/uvm-1.1d/../verilog_src/uvm-1.1d/src 
 
 include ../common.mk
 include ../agents/pipe_agent/pipe_agent.mk
@@ -28,7 +29,7 @@ build: COMMON_BUILD build_agents ENV_BUILD SEQ_BUILD TEST_BUILD TOP_BUILD
 	@echo Project is built 
 
 run:
-	@vsim -c -do "run -all" hvl_top hdl_top +UVM_TESTNAME="$(TEST)" +VSEQ=${SEQ} -suppress 8887
+	vsim -c -do "run -all" hvl_top hdl_top +UVM_NO_RELNOTES +UVM_TESTNAME="$(TEST)" +VSEQ=${SEQ} -suppress 8887
 
 clean:
 	rm -r work
