added new reporter class

--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -4,6 +4,7 @@ ENV_ROOT_PATH       	= ../env
 SEQ_ROOT_PATH       	= ../sequences
 TEST_ROOT_PATH      	= ../test
 COMMON_ROOT_PATH    	= ..
+UTILITY_ROOT_PATH    	= ../utility
 TOP_ROOT_PATH       	= ../top
 # UVM_HOME				= C:/questasim64_10.4e/uvm-1.1d/../verilog_src/uvm-1.1d/src 
 
@@ -14,6 +15,7 @@ include ../env/pcie_env.mk
 include ../sequences/pcie_seq.mk
 include ../test/pcie_test.mk
 include ../top/top.mk
+include ../utility/utility.mk
 
 TEST								?= pcie_test
 SEQ									?= reset_vseq,link_up_vseq
@@ -25,7 +27,7 @@ build_seq:    			build_agents SEQ_BUILD
 build_env:    			build_agents ENV_BUILD
 build_test:    			build_agents build_env build_seq TEST_BUILD
 
-build: COMMON_BUILD build_agents ENV_BUILD SEQ_BUILD TEST_BUILD TOP_BUILD
+build: COMMON_BUILD UTILITY_BUILD build_agents ENV_BUILD SEQ_BUILD TEST_BUILD TOP_BUILD
 	@echo Project is built 
 
 run:
