--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -19,6 +19,7 @@ include ../utility/utility.mk
 
 TEST								?= pcie_test
 SEQ									?= reset_vseq,link_up_vseq
+IS_ENV_UPSTREAM   	?= 1
 
 build_pipe: 			COMMON_BUILD PIPE_BUILD_PACKAGE PIPE_BUILD_INTERFACES
 build_lpif: 			COMMON_BUILD LPIF_BUILD_PACKAGE LPIF_BUILD_INTERFACES
