#60 fix a bug in Makefile

--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -8,6 +8,8 @@ UTILITY_ROOT_PATH    	= ../utility
 TOP_ROOT_PATH       	= ../top
 # UVM_HOME				= C:/questasim64_10.4e/uvm-1.1d/../verilog_src/uvm-1.1d/src 
 
+IS_ENV_UPSTREAM   		= 1
+
 include ../common.mk
 include ../agents/pipe_agent/pipe_agent.mk
 include ../agents/lpif_agent/lpif_agent.mk
@@ -19,7 +21,6 @@ include ../utility/utility.mk
 
 TEST								?= pcie_test
 SEQ									?= reset_vseq,link_up_vseq
-IS_ENV_UPSTREAM   	?= 1
 
 build_pipe: 			COMMON_BUILD PIPE_BUILD_PACKAGE PIPE_BUILD_INTERFACES
 build_lpif: 			COMMON_BUILD LPIF_BUILD_PACKAGE LPIF_BUILD_INTERFACES
