Improve the Makefile

--- a/tb/sim/Makefile
+++ b/tb/sim/Makefile
@@ -1,3 +1,4 @@
+#################################### Pathes #####################################
 PIPE_ROOT_PATH 		  	= ../agents/pipe_agent
 LPIF_ROOT_PATH 		  	= ../agents/lpif_agent
 ENV_ROOT_PATH       	= ../env
@@ -6,10 +7,11 @@ TEST_ROOT_PATH      	= ../test
 COMMON_ROOT_PATH    	= ..
 UTILITY_ROOT_PATH    	= ../utility
 TOP_ROOT_PATH       	= ../top
-# UVM_HOME				= C:/questasim64_10.4e/uvm-1.1d/../verilog_src/uvm-1.1d/src 
 
+################################ Build Configurations ################################
 IS_ENV_UPSTREAM   		= 1
 
+###################################### Includes ######################################
 include ../common.mk
 include ../agents/pipe_agent/pipe_agent.mk
 include ../agents/lpif_agent/lpif_agent.mk
@@ -19,9 +21,18 @@ include ../test/pcie_test.mk
 include ../top/top.mk
 include ../utility/utility.mk
 
-TEST								?= pcie_test
-SEQ									?= reset_vseq,link_up_vseq
+################################ Available Virutal Seqeunces ################################
+# dummy_vseq
+# reset_vseq
+# link_up_vseq
+# enter_recovery_vseq
+# data_exchange_vseq
 
+#################################### Run Configurations #####################################
+TEST								= pcie_test
+SEQ									= reset_vseq,link_up_vseq
+
+#################################### Rules #####################################
 build_pipe: 			COMMON_BUILD PIPE_BUILD_PACKAGE PIPE_BUILD_INTERFACES
 build_lpif: 			COMMON_BUILD LPIF_BUILD_PACKAGE LPIF_BUILD_INTERFACES
 build_agents: 			build_pipe build_lpif
